--- a/custom.css
+++ b/custom.css
@@ -37,6 +37,10 @@ body {
     line-height: 33px;
 }
 
+body .site-content .entry-content {
+    margin-bottom: -1px;
+}
+
 body a {
     text-decoration: none;
 }
@@ -120,6 +124,46 @@ footer .footer-list li:before {
     font-family: 'Avenir'; 
     font-weight: 400;
     letter-spacing: 1.8px;
+}
+
+.home-heading form {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.home-heading form .gform-body.gform_body {
+    flex-basis: 78%;
+}
+
+.home-heading label.gfield_label.gform-field-label {
+    display: none;
+}
+
+.home-heading .gform_wrapper.gravity-theme .gfield input[type="email"] {
+    border: 1px solid #9C9C9C;
+    background: #FFF;
+    padding: 17px 24px;
+    height: 64px;
+}
+
+.home-heading form .gform_footer.top_label input[type="submit"] {
+    height: 64px;
+    margin-bottom: 0;
+}
+
+.home-heading .gform_wrapper.gravity-theme .gform_footer {
+    margin: 0;
+    padding: 0;
+}
+
+.home-heading .gform_wrapper.gravity-theme .gfield input[type="email"]::placeholder {
+    color:#504E51;
+    font-size: 20px;
+    font-family: 'Garamond Premier Pro';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
 }
 
 .wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation-item::before {
@@ -279,18 +323,22 @@ header .wp-block-social-links.has-icon-color.is-style-logos-only.is-layout-flex 
 }
 
 h4 {
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0.1em;
+    font-size: 18px;    
+    font-family: 'Avenir';
+    font-style: normal;
+    font-weight: 400 !important;
+    line-height: 100%;
+    letter-spacing: 1.8px;
+    text-transform: uppercase;
 }
 
 
 h5 {
     font-size: 13px;
-    font-weight: 400;
+    font-weight: 400 !important;
     line-height: 13px;
-    letter-spacing: 0.1em;
+    letter-spacing: 1.3px;
+    text-transform: uppercase;
 }
 
 
@@ -301,18 +349,12 @@ h3 {
     letter-spacing: -0.03em;
 }
 
-blockquote {
-    font-size: 32px;
-    font-weight: 400;
-    line-height: 40px;
-}
 
 
-
-h2 {
+h2, h2 strong {
     font-size: 48px !important;
-    font-weight: 400;
-    line-height: 125%;
+    font-weight: 400 !important;
+    line-height: 125% !important;
     letter-spacing: -1.44px !important;
 }
 
@@ -328,9 +370,10 @@ h1 {
 
 h6 {
     font-size: 11px;
-    font-weight: 400;
-    line-height: 11px;
+    font-weight: 400 !important;
+    line-height: 11px !important;
     letter-spacing: 0.1em;
+    text-transform: uppercase;
 }
 
 body .max-1144 {
@@ -339,6 +382,166 @@ body .max-1144 {
     margin-right: auto !important;
     /* padding-left: 15px;
     padding-right: 15px; */
+}
+
+blockquote {
+    color: #000;
+    font-size: 32px;
+    font-family: 'Playfair Display';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 125%;
+    letter-spacing: -0.96px;
+    border-radius: 6px;
+    background: #F4F4F4;
+    padding: 80px !important;
+}
+
+blockquote .uagb-blockquote__content {
+    color: #000;
+    font-size: 32px !important;
+    font-family: 'Playfair Display';
+    font-style: normal !important;
+    font-weight: 400;
+    line-height: 125% !important;
+    letter-spacing: -0.96px;
+    margin-bottom: 0 !important;
+}
+
+.bottom-query .wp-block-cover__inner-container {
+    max-width: 1128px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.post-bio {
+    align-items: center;
+}
+
+.post-bio img {
+    width: 120px;
+    height: 120px;
+    border-radius: 72px;
+    vertical-align: middle;
+}
+
+.post-bio .wp-block-post-author__name {
+    font-size: 18px;
+    font-family: 'Avenir';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    letter-spacing: 1.8px;
+    text-transform: uppercase;
+    margin-bottom: 16px;
+}
+
+.single-post .entry-content figure.wp-block-image {
+    border-bottom: 1px solid #E3E3E3;
+    padding-bottom: 16px;
+}
+
+.single .author-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 24px;
+}
+
+.single .bottom-socials {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 48px;
+}
+
+.single .bottom-socials.header-meta {
+    width: auto !important;
+}
+
+.single .bottom-socials br,
+.single .bottom-socials .pld-like-count-wrap.pld-count-wrap {
+    display: none;
+}
+
+.single span.copy-url {
+    margin-top: 0;
+    display: flex;
+    align-items: center;
+}
+
+.single .bottom-socials .pld-like-dislike-wrap.pld-custom img {
+    vertical-align: middle;
+}
+
+.single .bottom-socials .pld-like-dislike-wrap .pld-common-wrap {
+    margin-right: 0;
+    min-width: auto;
+}
+
+.single .post-meta .uagb-social-share__outer-wrap {
+    margin-top: 0;
+    gap: 48px;
+}
+
+.single .post-meta .uagb-social-share__outer-wrap .uagb-ss__link {
+    padding: 0;
+}
+
+.single .post-meta .uagb-social-share__outer-wrap .uagb-ss__source-wrap,
+.single .post-meta .uagb-social-share__outer-wrap .uagb-ss__source-wrap svg {
+    width: 22px;
+    height: 22px;
+}
+
+.single .post-meta .uagb-social-share__outer-wrap .uagb-ss__wrapper {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.single .post-meta .wp-block-post-author {
+    margin-top: 0;
+}
+
+.single .post-meta .wp-block-post-date time,
+.single .post-meta .wp-block-post-author .wp-block-post-author__name,
+.single .post-meta .taxonomy-category {
+    color: #504E51;
+    font-size: 14px;
+    font-family: 'Garamond Premier Pro';
+    font-style: normal;
+    font-weight: 400;
+    text-transform: none;
+    margin-top: 0;
+    line-height: 150%;
+    letter-spacing: normal;
+}
+
+.single .post-meta .border-separator {
+    color: #504E51;
+    height: 20px;
+    width: 1px;
+    margin-top: -14px;
+}
+
+.entry-content .wp-block-image figcaption {
+    color: #504E51;
+    font-size: 14px;
+    font-family: 'Garamond Premier Pro';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    text-align: left;
+    margin-top: 16px;
+}
+
+.single .entry-content .wp-block-image img {
+    height: 640px;
+    object-fit: cover;
+}
+
+.single .bottom-post-info .post-meta {
+    justify-content: space-between;
 }
 
 
@@ -413,6 +616,7 @@ ul.home-articles li:not(:first-child) .wp-block-column.post-text {
     z-index: 9;
     left: calc(100% - 526px);
     padding-left: 0;
+    align-items: flex-start;
 }
 
 /* Blog page */
@@ -443,7 +647,7 @@ ul.home-articles li:not(:first-child) .wp-block-column.post-text {
     color: transparent !important;
     margin: 0 auto 0 0 !important;
     border: 1px solid  #504E51;
-    background:  #FFF;
+    background:  #FFF !important;
     padding: 23px 8px 23px 18px!important;
     font-size: 2px !important;
 }
@@ -461,9 +665,10 @@ ul.home-articles li:not(:first-child) .wp-block-column.post-text {
 
 .wp-block-ap-block-posts .apbPagination .apbPageNumber {
     color:#0F3548;
-    font-size: 18px;
+    font-size: 18px !important;
     font-family: 'Avenir';
     font-style: normal;
+    background:  transparent !important;
     font-weight: 400;
     line-height: 100%;
     letter-spacing: 1.8px;
@@ -486,7 +691,7 @@ ul.home-articles li:not(:first-child) .wp-block-column.post-text {
     color: #0F3548 !important;
     margin: 0 0 0 auto !important;
     border: 1px solid  #504E51;
-    background:  #FFF;
+    background:  #FFF !important;
     padding: 24px 25px 25px !important;
 }
 
@@ -498,6 +703,23 @@ ul.home-articles li:not(:first-child) .wp-block-column.post-text {
     display: flex;
     flex-wrap: wrap;
     position: relative;
+}
+
+.single-post .entry-content.wp-block-post-content p,
+.single-post .entry-content.wp-block-post-content h2,
+.single-post .entry-content.wp-block-post-content h3,
+.single-post .entry-content.wp-block-post-content h4,
+.single-post .entry-content.wp-block-post-content h5,
+.single-post .entry-content.wp-block-post-content h6,
+.single-post .entry-content.wp-block-post-content ul {
+    max-width: 720px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.single-post .entry-content.wp-block-post-content ul li {
+    padding-left: 10px;
+    margin-left: 20px;
 }
 
 @media (min-width: 782px) {
@@ -550,7 +772,8 @@ ul.home-articles li:not(:first-child) .wp-block-column.post-text {
     display: inline-flex;
     align-items: center;
 }
-.wp-block-ap-block-posts .apbPost .apbText .apbMeta::after {
+.wp-block-ap-block-posts .apbPost .apbText .apbMeta::after,
+.single .header-left .taxonomy-category.wp-block-post-terms::after {
     content: '';
     border-top: 1px solid #E3E3E3;
     flex-grow: 1;
@@ -620,6 +843,10 @@ body .apbPost .apbMeta .dashicons {
     object-fit: cover;
 }
 
+.page-id-13852 .entry-content {
+    background-color: #F4F4F4;
+}
+
 .blog-tabs.wp-block-uagb-tabs {
     max-width: 1128px;
     margin: 0 auto;
@@ -627,6 +854,12 @@ body .apbPost .apbMeta .dashicons {
 
 .blog-tabs.wp-block-uagb-tabs .uagb-tabs__body-wrap {
     padding-right: 0;
+}
+
+.blog-tabs .uagb-tabs__panel.uagb-tabs__align-left {
+    border-bottom: 1px solid #E3E3E3 !important;
+    width: 100%;
+    margin-bottom: 24px !important;
 }
 
 .blog-tabs.wp-block-uagb-tabs.uagb-tabs__wrap .uagb-tabs__body-container {
@@ -723,7 +956,7 @@ body .blog-tabs .apbGridPosts .apbPost.six .apbTitle, body .blog-tabs .apbGridPo
 }
 
 .wp-block-group.alignwide.home-heading {
-    max-width: 742px;
+    max-width: 880px;
     width: 100%;
     margin-left: auto !important;
     margin-right: auto !important;
@@ -840,19 +1073,63 @@ body .blog-tabs .apbGridPosts .apbPost.six .apbTitle, body .blog-tabs .apbGridPo
 }
 
 
-/* Responsive Styles */
+/* RESPONSIVE Styles */
 
 @media screen and (max-width: 844px) {
-    h2 {
+    header .wp-block-columns.are-vertically-aligned-center .wp-block-column:first-child,
+    header .wp-block-columns.are-vertically-aligned-center .wp-block-column:last-child {
+        flex-basis: 5.33% !important;
+    }
+
+    body .site-header .wp-block-columns {
+        flex-wrap: wrap !important;
+        justify-content: space-between;
+    }
+
+    .site-header .wp-block-social-links.has-icon-color {
+        flex-wrap: nowrap !important;
+    }
+
+    h2, h2 strong {
         font-size: 44px !important;
+        line-height: 47px !important;
     }
 
     h1 {
         font-size: 50px !important;
     }
 
+    blockquote {
+        padding: 40px !important;
+    }
+
+    blockquote, blockquote .uagb-blockquote__content {
+        font-size: 25px !important;
+    }
+
     .wp-block-navigation__responsive-container-open:not(.always-shown) {
         display: block !important;
+    }
+
+    .single .entry-content .wp-block-image img {
+        height: 400px;
+    }
+
+    .single .bottom-post-info .post-meta {
+        justify-content: center;
+    }
+
+    .post-bio {
+        flex-direction: column;
+        gap: 24px;
+    }
+
+    .bottom-query .wp-block-ap-block-posts .apbGridPosts {
+        padding: 0;
+    }
+
+    .bottom-query article {
+        margin-bottom: 24px !important;
     }
     
     header .wp-block-navigation__container, .home header .column-logo {
@@ -882,9 +1159,32 @@ body .blog-tabs .apbGridPosts .apbPost.six .apbTitle, body .blog-tabs .apbGridPo
         padding-right: 20px !important;
     }
 
+    .wp-block-ap-block-posts .apbPagination li:first-child {
+        padding: 15px 2px 15px 11px!important
+    }
+
+    .wp-block-ap-block-posts .apbPagination li:first-child::before {
+        font-size: 16px;
+    }
+
+    
+    .wp-block-ap-block-posts .apbPagination li:last-child {
+        padding: 17px 15px 17px !important;
+    }
+
+    .wp-block-ap-block-posts .apbPagination {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
     .home-headshop.max-1144 {
         padding-left: 20px !important; 
         padding-left: 20px !important; 
+    }
+
+    .home-heading form {
+        flex-direction: column;
+        gap: 24px;
     }
 
     .wp-block-cover.alignfull.shop-banner {
@@ -1019,6 +1319,10 @@ body .blog-tabs .apbGridPosts .apbPost.six .apbTitle, body .blog-tabs .apbGridPo
         width: 100%;
     }
 
+    footer nav.items-justified-right {
+        justify-content: center !important;
+    }
+
     ul.home-articles, .home-headshop {
         display: block;
     }
@@ -1044,9 +1348,25 @@ body .blog-tabs .apbGridPosts .apbPost.six .apbTitle, body .blog-tabs .apbGridPo
         margin-right: auto;
     }
 
-    .big-article .wp-block-post-title {
+    /* .blog-tabs .apbPost.six .apbThumb img {
+        height: auto;
+    } */
+
+    body .blog-tabs .apbGridPosts .apbPost.ten .apbThumb, .blog-tabs .apbPost:nth-child(6) .apbThumb, .blog-tabs .apbPost:nth-child(21) .apbThumb, .blog-tabs .apbPost:nth-child(36) .apbThumb, body .blog-tabs .apbGridPosts .apbPost.six .apbThumb, .blog-tabs .apbPost:nth-child(10) .apbThumb, .blog-tabs .apbPost:nth-child(25) .apbThumb, .blog-tabs .apbPost:nth-child(40) .apbThumb {
+        height: 360px;
+    }
+
+    /* .big-article .wp-block-post-title {
         font-size: 28px !important;
         line-height: 35px !important;
+    } */
+
+    body .blog-tabs .apbGridPosts .apbPost.six .apbTitle a {
+        font-size: 20px !important;
+    }
+
+    .featured-article.wp-block-ap-block-posts .apbPost .apbText .featured-text .apbMeta {
+        flex-basis: 40%;
     }
 
     ul.home-articles li .big-article .wp-block-column.post-text {
@@ -1062,7 +1382,8 @@ body .blog-tabs .apbGridPosts .apbPost.six .apbTitle, body .blog-tabs .apbGridPo
         width: 66%;
     }
 
-    .featured-article.wp-block-ap-block-posts .apbPost.apbSideImage.grid {
+    .featured-article.wp-block-ap-block-posts .apbPost.apbSideImage.grid,
+    .single-header-section {
         flex-direction: column;
     }
 
@@ -1073,6 +1394,10 @@ body .blog-tabs .apbGridPosts .apbPost.six .apbTitle, body .blog-tabs .apbGridPo
         top: 0;
     }
 
+    .featured-article .wp-block-ap-block-posts .apbGridPosts {
+        padding: 0;
+    }
+
     .featured-article.wp-block-ap-block-posts .apbPost.apbSideImage.rightImage .apbThumb {
         order: 1;
     }
@@ -1081,16 +1406,50 @@ body .blog-tabs .apbGridPosts .apbPost.six .apbTitle, body .blog-tabs .apbGridPo
         order: 2;
     }
 
-    body .blog-tabs .apbGridPosts .apbPost.six .apbTitle,
-    body .blog-tabs .apbPost:nth-child(6) .apbTitle, 
-    body .blog-tabs .apbPost:nth-child(21) .apbTitle, 
-    body .blog-tabs .apbPost:nth-child(36) .apbTitle, 
-    body .blog-tabs .apbPost:nth-child(10) .apbTitle a, 
-    body .blog-tabs .apbPost:nth-child(25) .apbTitle a, 
-    body .blog-tabs .apbPost:nth-child(40) .apbTitle a, 
-    body .blog-tabs .apbPost:nth-child(6) .apbTitle a, 
-    body .blog-tabs .apbPost:nth-child(21) .apbTitle a, 
-    body .blog-tabs .apbPost:nth-child(36) .apbTitle a {
+    .featured-article.wp-block-ap-block-posts .apbPost .apbText .featured-text {
+        padding-top: 30px;
+        padding-bottom: 30px;
+        padding-right: 0;
+        max-width: 100%;
+    }
+
+    .single .wp-site-blocks {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .wp-site-blocks .single-header-section .wp-block-uagb-container.uagb-is-root-container.alignfull {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+
+    .single .header-left {
+        order: 2;
+        margin-top: 24px;
+    }
+
+    .single-header-section .wp-block-post-featured-image img {
+        width: 100%;
+    }
+    
+    .header-section .wp-block-column.header-left .wp-block-uagb-container .uagb-container-inner-blocks-wrap {
+        position: relative;
+        left: 0;
+        transform: none;
+        top: 0;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 0;
+        padding-bottom: 0;
+        max-width: 100%;
+    }
+
+body .blog-tabs .apbGridPosts .apbPost.ten .apbTitle, body .blog-tabs .apbGridPosts .apbPost.ten .apbTitle a,
+body .blog-tabs .apbGridPosts .apbPost.six .apbTitle, body .blog-tabs .apbGridPosts .apbPost.six .apbTitle a,
+.blog-tabs .apbPost:nth-child(10) .apbTitle, .blog-tabs .apbPost:nth-child(25) .apbTitle, .blog-tabs .apbPost:nth-child(40) .apbTitle,
+.blog-tabs .apbPost:nth-child(6) .apbTitle, .blog-tabs .apbPost:nth-child(21) .apbTitle, .blog-tabs .apbPost:nth-child(36) .apbTitle,
+.blog-tabs .apbPost:nth-child(10) .apbTitle a, .blog-tabs .apbPost:nth-child(25) .apbTitle a, .blog-tabs .apbPost:nth-child(40) .apbTitle a,
+.blog-tabs .apbPost:nth-child(6) .apbTitle a, .blog-tabs .apbPost:nth-child(21) .apbTitle a, .blog-tabs .apbPost:nth-child(36) .apbTitle a{
         font-family: 'Playfair Display', serif;
         font-weight: 400;
         font-size: 20px !important;
@@ -1197,6 +1556,98 @@ header .wp-block-columns.are-vertically-aligned-center .wp-block-column:last-chi
     footer .footer-list li:before {
         bottom: 13px;
         font-size: 14px;
+    }
+}
+@media  screen and (min-width: 768px) and (max-width: 843px)  {
+    .blog-tabs.uagb-tabs__wrap {
+        display: block;
+    }
+
+    .blog-tabs.wp-block-uagb-tabs .uagb-tabs__body-wrap {
+        max-width: 100%;
+    }
+
+    .blog-tabs.uagb-tabs__wrap.uagb-tabs__vstyle6-tablet ul.uagb-tabs__panel {
+        flex-direction: row;
+        max-width: 100%;
+    }
+
+    .uagb-tabs__wrap ul.uagb-tabs__panel li.uagb-tab a {
+        font-size: 16px;
+    }
+}
+
+
+
+@media  screen and (min-width: 844px) and (max-width: 1023px) {
+    .blog-tabs.wp-block-uagb-tabs {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .blog-tabs.uagb-tabs__wrap {
+        display: block;
+    }
+
+    .blog-tabs.wp-block-uagb-tabs .uagb-tabs__body-wrap {
+        max-width: 100%;
+    }
+
+    .blog-tabs.uagb-tabs__wrap.uagb-tabs__vstyle6-tablet ul.uagb-tabs__panel {
+        flex-direction: row;
+        max-width: 100%;
+    }
+
+    .uagb-tabs__wrap ul.uagb-tabs__panel li.uagb-tab a {
+        font-size: 16px;
+    }
+
+    .featured-article.wp-block-ap-block-posts .apbPost .apbText .featured-text {
+        left: 20px;
+        padding-top: 32px;
+        padding-bottom: 32px;
+    }
+
+    .header-section .wp-block-column.header-left .wp-block-uagb-container .uagb-container-inner-blocks-wrap {
+        left: 80px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        padding-right: 40px;
+    }
+
+    .featured-article.wp-block-ap-block-posts .apbPost .apbText .featured-text .apbTitle a,
+    .header-section .wp-block-column.header-left .wp-block-uagb-container .uagb-container-inner-blocks-wrap h2 {
+        font-size: 38px !important;
+    }
+
+    /* .blog-tabs.uagb-tabs__wrap.uagb-tabs__vstyle6-tablet ul.uagb-tabs__panel .uagb-tab {
+        width: 100%;
+    } */
+}
+
+@media  screen and (min-width: 1201px) and (max-width: 1364px) {
+    footer .gf_browser_chrome.gform_wrapper {
+        width: 80%;
+    }
+}
+
+@media  screen and (min-width: 1023px) and (max-width: 1159px) {
+    .blog-tabs.wp-block-uagb-tabs {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .featured-article.wp-block-ap-block-posts .apbPost .apbText .featured-text {
+        left: 20px;
+        padding-top: 32px;
+        padding-bottom: 32px;
+    }
+
+    .header-section .wp-block-column.header-left .wp-block-uagb-container .uagb-container-inner-blocks-wrap {
+        left: 80px;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        padding-right: 40px;
     }
 }
 
